Causeview Package Complete/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BatchDefaults__c</fullName>
        <inlineHelpText>Stores the default value presets for Givingpower Gift Batches</inlineHelpText>
        <label>Batch Defaults</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BatchHiddenFields__c</fullName>
        <label>Batch Hidden Fields</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BatchReadonlys__c</fullName>
        <label>Batch Readonlys</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Filter__c</fullName>
        <description>To save last selected payment filter in the Consolidated Receipt view.</description>
        <label>Payment Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Account_ID__c</fullName>
        <label>Payment Gateway Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_CC_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark this box if you would like to receive a 7 day notification of expiring Recurring Donations</description>
        <inlineHelpText>Mark this box if you would like to receive a 7 day notification of expiring Recurring Donations</inlineHelpText>
        <label>Receive CC Updates</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>